syntax = "proto3";

// protobuf的package，根据业务来定，一个文件夹下的package得是一样的
package api_order;

// 和package保持一致
option go_package = "api_order";

// 导入需要使用的文件，package/文件名
import "api/api.proto";
import "api_order/trade.proto";
import "api_order/order_items.proto";
import "api_order/order.proto";

service OrderService {

    // 创建一笔交易 对外
    rpc CreateTrade(CreateTradeReq) returns (CreateTradeRsp) {
        option (api.post) = "/order/create_trade";
    }

    // 继续支付 对外
    rpc ReTrade(ReTradeReq) returns (ReTradeRsp){
        option (api.post) = "/order/re_trade";
    }

    // 取消一笔交易 对外
    rpc CancelTrade(CancelTradeReq) returns (CancelTradeRsp) {
        option (api.post) = "/order/cancel_trade";
    }

    // 查询订单项 对外
    rpc GetOrderItems(GetOrderItemsReq) returns (GetOrderItemsRsp) {
        option (api.get) = "/order/get_order_items";
    }

    // 支付成功通知 对内
    rpc PaySuccessToOrder(PaySuccessToOrderReq) returns (PaySuccessToOrderRsp) {
        option (api.post) = "/order/pay_success_to_order";
    }
    
    // 支付取消通知 对内
    rpc PayCancelToOrder(PayCancelToOrderReq) returns (PayCancelToOrderRsp) {
        option (api.post) = "/order/pay_cancel_to_order";
    }

}

