syntax = "proto3";

package order;

option go_package = "order";

// 交易基础信息 （不带有订单）
message BaseTrade {
    string trade_no = 1;
    string trade_amount = 2;
    uint64 buyer_id = 3;
    uint64 seller_id = 4;
    string pay_type = 5; // 支付类型
    string trade_status = 6;
}

// 订单基础信息 (不带有订单项)
message BaseOrder {
    string order_no = 1;
    string trade_no = 2;
    uint64 shop_id = 3;                     // 店铺ID
    string order_amount = 4;                // 订单金额
    uint64 seller_id = 5;                   // 卖家id
    uint64 buyer_id = 6;                    // 买家id
    string order_status = 7;                 // 订单状态
    string pay_type = 8;                    // 支付类型
    string created_at = 9;                // 创建时间
}

// 规格值信息
message BaseSpecValue {
    uint64 id = 1;
    uint64 spec_id = 2;
    string spec_name = 3;
    string spec_value = 4;
}

// 订单项基础信息
message BaseOrderItem {
    uint64 id  = 1;                     // 订单项id
    uint64 spu_id = 2;                  // spu id
    uint64 sku_id = 3;                  // sku id
    string spu_name = 4;                // spu名称
    uint64 category_id = 5;             // 分类id
    string category_name = 6;           // 分类名称
    uint64 brand_id = 7;                // 品牌id
    string brand_name = 8;              // 品牌名称
    string sku_img_url = 9;             // sku图片
    string sku_amount = 10;              // sku金额
    repeated BaseSpecValue spec_value_list = 11;            // 规格信息

    string trade_no = 12;
    string order_no = 13;
    uint64 shop_id = 14;
    uint64 seller_id = 15;
    uint64 buyer_id = 16;

    int32 buy_num = 17; //购买数量
}


// 交易详情
message BaseTradeInfo {
    uint64 id = 1;
    string trade_no = 2;
    string page_url = 3;
}