syntax = "proto3";

package order;

option go_package = "order";


import "order/common.proto";

// 支付成功
message PaySuccessToOrderReq{
    string trade_no = 1;
}

message PaySuccessToOrderRsp{
    int32 code = 1; 
    string msg = 2; 
    string log_id = 3; 
    PaySuccessToOrderRspData data = 4; 
    message PaySuccessToOrderRspData {
        string trade_no = 1;
    }
}

// 取消支付
message PayCancelToOrderReq{
    string trade_no = 1;
}
message PayCancelToOrderRsp{
    int32 code = 1; 
    string msg = 2; 
    string log_id = 3; 
    PayCancelToOrderRspData data = 4; 
    message PayCancelToOrderRspData {
        string trade_no = 1;
    }
}

// 订单详情
message GetOrderDetailReq {
    string order_no = 1;
}

message GetOrderDetailRsp {
    int32 code = 1;
    string msg = 2;
    string log_id = 3;
    GetOrderDetailRspData data = 4;
    message GetOrderDetailRspData {
        BaseOrder order = 1;
        repeated BaseOrderItem order_item_list = 2;
    }
}

// 查询卖家订单列表
message GetSellerOrderListReq {
    uint64 shop_id = 1;
    string order_status = 2;
    int32 page_size = 3;
    int32 page_no = 4;
}


message GetSellerOrderListRsp {
    int32 code = 1;
    string msg = 2;
    string log_id = 3;
    GetSellerOrderListRspData data = 4;
    message GetSellerOrderListRspData {
        repeated BaseOrder order_list = 1;
        int32 total = 2;
        int32 page_size = 3;
        int32 page_no = 4;
    }
}
