syntax = "proto3";

package order;

option go_package = "order";


import "order/common.proto";


message TradeTrade{
    BaseTrade trade = 1;
    repeated TradeOrder order_list = 2;
}

message TradeOrder {
    BaseOrder order = 1;
    repeated BaseOrderItem order_item_list = 2;
}



// 创建交易
message CreateTradeReq{
    string token = 1;
    TradeTrade trade = 2;
}


message CreateTradeRsp{
    int32 code = 1; 
    string msg = 2; 
    string log_id = 3; 
    CreateTradeRspData data = 4; 
    message CreateTradeRspData {
        string trade_no = 1; // 电商交易号
    }
}


// 取消交易
message CancelTradeReq{
    string trade_no = 1;
}

message CancelTradeRsp{
    int32 code = 1; 
    string msg = 2; 
    string log_id = 3; 
    CancelTradeRspData data = 4; 
    message CancelTradeRspData {
        string trade_no = 1; // 电商交易号
    }
}


// 查询交易列表
message GetTradeListReq {
}

message GetTradeListRsp {
    int32 code = 1;
    string msg = 2;
    string log_id = 3;
    GetTradeListRspData data = 4;

    message GetTradeListRspData {
        repeated TradeTrade trade_list = 1;
    }
}